<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

    <LinearLayout
        style="@style/form_page_root_view">


        <TextView
            android:id="@+id/label_dealerName"
            style="@style/form_label"
            android:text="@string/label_dealerName" />
        <EditText
            android:id="@+id/dealerName"
            style="@style/form_field" />

        <TextView
            android:id="@+id/label_dealerAddress"
            style="@style/form_label"
            android:text="@string/label_dealerAddress" />
        <EditText
            android:id="@+id/dealerAddress"
            style="@style/form_field" />


        <TextView
            android:id="@+id/label_dealerFax"
            style="@style/form_label"
            android:text="@string/label_dealerFax" />
        <EditText
            android:id="@+id/dealerFax"
            style="@style/form_field" />


        <TextView
            android:id="@+id/label_dealerEmail"
            style="@style/form_label"
            android:text="@string/label_dealerEmail" />
        <EditText
            android:inputType="textEmailAddress"
            android:id="@+id/dealerEmail"
            style="@style/form_field" />



    </LinearLayout>


</ScrollView>
