<ScrollView  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/form_padding">


        <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/label_name" />

        <EditText
            android:id="@+id/surname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/label_surname" />

        <EditText
            android:id="@+id/middleName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/label_middleName" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/form_inline_divider_height" />


        <EditText
            android:id="@+id/address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/label_address" />




    </LinearLayout>


</ScrollView>
