<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
    android:background="#fff"
            android:layout_height="match_parent">

    <LinearLayout
        style="@style/form_page_root_view">

        <TextView
            android:id="@+id/label_dealerName"
            style="@style/form_label"
            android:text="@string/label_dealerName" />
        <EditText
            android:tag = '{ "label" :  "label_dealerName"  ,  "strategy": "edit_text"  ,   "validators": ["required"]   ,   "labelView": "label_dealerName" }'
            android:id="@+id/dealerName"
            style="@style/form_field" />

        <TextView
            android:id="@+id/label_dealerAddress"
            style="@style/form_label"
            android:text="@string/label_dealerAddress" />
        <EditText
            android:tag = '{ "label" :  "label_dealerAddress"  ,  "strategy": "edit_text"  ,   "validators": ["required"]   ,   "labelView": "label_dealerAddress" }'
            android:id="@+id/dealerAddress"
            style="@style/form_field" />


        <TextView
            android:id="@+id/label_dealerFax"
            style="@style/form_label"
            android:text="@string/label_dealerFax" />
        <EditText
            android:tag = '{ "label" :  "label_dealerFax"  ,  "strategy": "edit_text"  ,   "validators": []   ,   "labelView": "label_dealerFax" }'
            android:id="@+id/dealerFax"
            style="@style/form_field" />


        <TextView
            android:id="@+id/label_dealerEmail"
            style="@style/form_label"
            android:text="@string/label_dealerEmail" />
        <EditText
            android:tag = '{ "label" :  "label_dealerEmail"  ,  "strategy": "edit_text"  ,   "validators": []   ,   "labelView": "label_dealerEmail" }'
            android:inputType="textEmailAddress"
            android:id="@+id/dealerEmail"
            style="@style/form_field" />



        <Button
            android:id="@+id/saveDealer"
            android:layout_marginTop="@dimen/form_element_vertical_margin"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_save"/>


    </LinearLayout>


</ScrollView>
